<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">daana</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="tv_create_event_name">Event Name</string>
    <string name="select">Food</string>
    <string name="title_activity_main">DĀNA</string>
    <string name="username_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="btnRegister">I am new here</string>
    <string name="btnLogin">Login</string>
    <string name="facebook_desc">ConnectWithFacebook</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="etFirstName">First Name</string>
    <string name="etLastName">Last Name</string>
    <string name="etPhoneNumber">Phone Number (optional)</string>
    <string name="etEmailAddress">Email Address</string>
	<string name="btnJoin">Join</string>
	<string name="etOrganization">Organization</string>
	<string name="activity_main_welcome">Welcome to Dána!</string>
	
	
</resources>
