<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity" >

    <ImageButton
        android:id="@+id/imgBtnProfilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="33dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:src="@drawable/new_user" />

    <EditText
        android:id="@+id/etFirstName"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgBtnProfilePic"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/imgBtnProfilePic"
        android:ems="10"
        android:hint="@string/etFirstName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etFirstName"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/etLastName" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imgBtnProfilePic"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp">
        
        <EditText
	        android:id="@+id/etOrganization"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:hint="@string/etOrganization" />
        <EditText
	        android:id="@+id/etPhoneNumber"
	        android:inputType="phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:hint="@string/etPhoneNumber" />
        <EditText
	        android:id="@+id/etEmailAddress"
	        android:inputType="textEmailAddress"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:hint="@string/etEmailAddress" />
        <EditText
	        android:id="@+id/etNewPassword"
	        android:inputType="textPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:ems="10"
	        android:hint="@string/password_hint" />
        <Button
	        android:id="@+id/btnJoin"
	        android:layout_width="250dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="25dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="20dp"
	        android:background="@android:color/darker_gray"
	        android:text="@string/btnJoin" />
    </LinearLayout>    
</RelativeLayout>
