<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegister"
        android:layout_alignLeft="@+id/iv_login_slide_images"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/etUsername"
        android:layout_alignLeft="@+id/etUsername"
        android:layout_marginBottom="15dp"
        android:background="@android:color/darker_gray" />

    <ImageButton
        android:id="@+id/btnFBSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/facebook_desc"
        android:scaleType="centerInside"
        android:src="@drawable/facebook_connect" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etPassword"
        android:layout_marginBottom="15dp"
        android:text="@string/btnRegister" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignTop="@+id/btnRegister"
        android:text="@string/btnLogin" />

    <ImageView
        android:id="@+id/iv_login_slide_images"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/main_board" />

</RelativeLayout>